Add unit tests for JobRole and Capability Controllers